<resources>
    <string name="app_name">Homework 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project">Project</string>
    <string name="timer">Timer</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_new_project">Add new project</string>
    <string name="add_new_task">Add new task</string>
    <string name="tasks">Tasks</string>
    <string name="projects">Projects</string>
    <string name="task">Task</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="new_timer">New timer</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="success">Success</string>
    <string name="success_add_task_for_timer">Success add task for timer</string>
</resources>