<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/timerFragment">

    <fragment
        android:id="@+id/timerFragment"
        android:name="com.example.homework1.ui.fragment.TimerFragment"
        android:label="@string/timer"
        tools:layout="@layout/fragment_timer" >
        <action
            android:id="@+id/action_timerFragment_to_projectsFragment"
            app:destination="@id/projectsFragment" />
    </fragment>
    <fragment
        android:id="@+id/projectsFragment"
        android:name="com.example.homework1.ui.fragment.ProjectsFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_projects">
        <action
            android:id="@+id/action_projectsFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
        <argument
            android:name="isSelect"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.homework1.ui.fragment.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks">
        <argument
            android:name="projectId"
            app:argType="long" />
    </fragment>
</navigation>